# pa-backend

./: CMakeLists.txt  README.md  build.sh  update_fast_float.sh  update_fb_libs.sh
.github/workflows/: ci.yml
config/: server_config.json
database/: init.sql
include/: ServerApp.h
include/db/: DatabaseManager.h
include/handlers/: ApiHandler.h  BaseHandler.h  HandlerFactory.h  HealthCheckHandler.h  NotFoundHandler.h
logs/: secure_app_server.ERROR  secure_app_server.INFO  secure_app_server.MSS-WS-N.maxirmx.log.INFO.20250408-134812.77562  secure_app_server.WARNING
src/: ServerApp.cpp  main.cpp
src/db/: DatabaseManager.cpp
src/handlers/: ApiHandler.cpp  BaseHandler.cpp  HandlerFactory.cpp  HealthCheckHandler.cpp  NotFoundHandler.cpp
